--- a/code/API_definitions/simSwap.yaml
+++ b/code/API_definitions/simSwap.yaml
@@ -1,16 +1,16 @@
 openapi: 3.0.0
 info:
-  title: SIM SWAP API
+  title: CAMARA simSwap
   version: 1.0.0
 servers:
-  - url: https://mobileconnect-test.telekom.de
+  - url: https://mobileconnect.telekom.de
 tags:
-  - name: Account Takeover Protection
+  - name: ATP
 paths:
   /token:
     post:
       tags:
-        - Account Takeover Protection
+        - ATP
       summary: Token
       requestBody:
         content:
@@ -28,7 +28,7 @@ paths:
           in: header
           schema:
             type: string
-          description: base64 client_id:client_secret
+          description: base64(client_id:client_secret)
           example: 'Basic '
         - name: grant_type
           in: query
@@ -40,27 +40,51 @@ paths:
           schema:
             type: string
           example: mc_atp
-        - name: client_id
-          in: query
-          schema:
-            type: string
-          description: provided during SP onboarding
-          example: test_client_id
-        - name: client_secret
-          in: query
-          schema:
-            type: string
-          description: provided during SP onboarding
-          example: test_client_secret
       responses:
         '200':
-          description: Successful response
+          description: OK
+          headers:
+            Date:
+              schema:
+                type: string
+                example: Fri, 18 Feb 2022 13:16:57 GMT
+            Content-Type:
+              schema:
+                type: string
+                example: application/json;charset=UTF-8
+            Transfer-Encoding:
+              schema:
+                type: string
+                example: chunked
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Cache-Control:
+              schema:
+                type: string
+                example: no-store
+            Pragma:
+              schema:
+                type: string
+                example: no-cache
+            Strict-Transport-Security:
+              schema:
+                type: string
+                example: max-age=15724800; includeSubDomains
           content:
-            application/json: {}
+            application/json:
+              schema:
+                type: object
+              example:
+                access_token: mkmaJ53--rCK1SBUIjxzavoJCcFbx3453dKmZr39A8k
+                scope: mc_atp
+                token_type: Bearer
+                expires_in: '500'
   /openid/userinfo:
     post:
       tags:
-        - Account Takeover Protection
+        - ATP
       summary: User Info
       description: userinfo
       requestBody:
@@ -81,7 +105,7 @@ paths:
           schema:
             type: string
           description: Authorization token from Token request (token client_credentials)
-          example: Bearer wVWxnNgTZP9ukuldWTkqrCgoUout9Gnv8nND-UN8jLY
+          example: Bearer 81edUBMJBXQaZA-tiUdammZ5v9149MTklvy6_i93F7c
         - name: User-ID-Type
           in: header
           schema:
@@ -91,9 +115,64 @@ paths:
           in: header
           schema:
             type: integer
-          example: '491758631807'
+          description: Test MSISDN
+          example: '4915164818763'
       responses:
         '200':
-          description: Successful response
+          description: OK
+          headers:
+            Date:
+              schema:
+                type: string
+                example: Fri, 18 Feb 2022 13:20:20 GMT
+            Content-Type:
+              schema:
+                type: string
+                example: application/json;charset=UTF-8
+            Transfer-Encoding:
+              schema:
+                type: string
+                example: chunked
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Pragma:
+              schema:
+                type: string
+                example: no-cache
+            Cache-Control:
+              schema:
+                type: string
+                example: no-store
+            X-Content-Type-Options:
+              schema:
+                type: string
+                example: nosniff
+            X-XSS-Protection:
+              schema:
+                type: string
+                example: 1; mode=block
+            X-Frame-Options:
+              schema:
+                type: string
+                example: DENY
+            Strict-Transport-Security:
+              schema:
+                type: string
+                example: max-age=15724800; includeSubDomains
           content:
-            application/json: {}
+            application/json:
+              schema:
+                type: object
+              examples:
+                example-0:
+                  summary: User Info - BOOLEAN
+                  value:
+                    simChange: 'false'
+                    correlation_id: 3149eec1-fc29-4bf6-8097-ddfd4a06d3db
+                example-1:
+                  summary: User Info - DATE
+                  value:
+                    simChange: '2020-07-13'
+                    correlation_id: 59c82672-107b-4019-b469-169bf955d8f1
