--- a/code/API_definitions/simSwap.yaml
+++ b/code/API_definitions/simSwap.yaml
@@ -3,14 +3,17 @@ info:
   title: CAMARA simSwap
   version: 1.0.0
 servers:
-  - url: https://mobileconnect.telekom.de
+  - url: https://api.server.test
+    description: API server providing CAMARA APIs
 tags:
-  - name: ATP
+  - name: Mobile Connect ATP
+  - name: Sim Swap Boolean
+  - name: Sim Swap Timestamp
 paths:
   /token:
     post:
       tags:
-        - ATP
+        - Mobile Connect ATP
       summary: Token
       requestBody:
         content:
@@ -84,7 +87,7 @@ paths:
   /openid/userinfo:
     post:
       tags:
-        - ATP
+        - Mobile Connect ATP
       summary: User Info
       description: userinfo
       requestBody:
@@ -164,15 +167,260 @@ paths:
           content:
             application/json:
               schema:
-                type: object
+                oneOf:
+                  - $ref: '#/components/schemas/atpTimestamp'
+                  - $ref: '#/components/schemas/atpBoolean'
               examples:
                 example-0:
                   summary: User Info - BOOLEAN
                   value:
                     simChange: 'false'
+                    isUncontidionalCallDivertActive: 'true'
+                    isLostStolen: 'false'
+                    deviceChange: '2022-12-06'
+                    accountState: 'active'
                     correlation_id: 3149eec1-fc29-4bf6-8097-ddfd4a06d3db
                 example-1:
                   summary: User Info - DATE
                   value:
                     simChange: '2020-07-13'
                     correlation_id: 59c82672-107b-4019-b469-169bf955d8f1
+  /simSwap/verify:
+    post:
+      tags: 
+      - Sim Swap Boolean
+      summary: resource
+      description: ''
+      requestBody:
+        content: {}
+      parameters:
+        - name: Accept
+          in: header
+          schema:
+            type: string
+          example: '*/*'
+        - name: Content-Type
+          in: header
+          schema:
+            type: string
+          example: application/x-www-form-urlencoded
+        - name: Authorization
+          in: header
+          schema:
+            type: string
+          description: Authorization token from Token request (token client_credentials)
+          example: Bearer 81edUBMJBXQaZA-tiUdammZ5v9149MTklvy6_i93F7c
+        - name: User-ID-Type
+          in: header
+          schema:
+            type: string
+          example: msisdn
+        - name: User-ID
+          in: header
+          schema:
+            type: integer
+          description: Test MSISDN
+          example: '4915164818763'
+      responses:
+        '200':
+          description: OK
+          headers:
+            Date:
+              schema:
+                type: string
+                example: Fri, 18 Feb 2022 13:20:20 GMT
+            Content-Type:
+              schema:
+                type: string
+                example: application/json;charset=UTF-8
+            Transfer-Encoding:
+              schema:
+                type: string
+                example: chunked
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Pragma:
+              schema:
+                type: string
+                example: no-cache
+            Cache-Control:
+              schema:
+                type: string
+                example: no-store
+            X-Content-Type-Options:
+              schema:
+                type: string
+                example: nosniff
+            X-XSS-Protection:
+              schema:
+                type: string
+                example: 1; mode=block
+            X-Frame-Options:
+              schema:
+                type: string
+                example: DENY
+            Strict-Transport-Security:
+              schema:
+                type: string
+                example: max-age=15724800; includeSubDomains
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/simChangeBoolean'
+              examples:
+                example-0:
+                  summary: User Info - BOOLEAN
+                  value:
+                    simChange: 'false'
+                    correlation_id: 3149eec1-fc29-4bf6-8097-ddfd4a06d3db
+  /simSwap/last:
+    post:
+      tags: 
+      - Sim Swap Timestamp
+      summary: resource
+      description: ''
+      requestBody:
+        content: {}
+      parameters:
+        - name: Accept
+          in: header
+          schema:
+            type: string
+          example: '*/*'
+        - name: Content-Type
+          in: header
+          schema:
+            type: string
+          example: application/x-www-form-urlencoded
+        - name: Authorization
+          in: header
+          schema:
+            type: string
+          description: Authorization token from Token request (token client_credentials)
+          example: Bearer 81edUBMJBXQaZA-tiUdammZ5v9149MTklvy6_i93F7c
+        - name: User-ID-Type
+          in: header
+          schema:
+            type: string
+          example: msisdn
+        - name: User-ID
+          in: header
+          schema:
+            type: integer
+          description: Test MSISDN
+          example: '4915164818763'
+      responses:
+        '200':
+          description: OK
+          headers:
+            Date:
+              schema:
+                type: string
+                example: Fri, 18 Feb 2022 13:20:20 GMT
+            Content-Type:
+              schema:
+                type: string
+                example: application/json;charset=UTF-8
+            Transfer-Encoding:
+              schema:
+                type: string
+                example: chunked
+            Connection:
+              schema:
+                type: string
+                example: keep-alive
+            Pragma:
+              schema:
+                type: string
+                example: no-cache
+            Cache-Control:
+              schema:
+                type: string
+                example: no-store
+            X-Content-Type-Options:
+              schema:
+                type: string
+                example: nosniff
+            X-XSS-Protection:
+              schema:
+                type: string
+                example: 1; mode=block
+            X-Frame-Options:
+              schema:
+                type: string
+                example: DENY
+            Strict-Transport-Security:
+              schema:
+                type: string
+                example: max-age=15724800; includeSubDomains
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/simChangeTimestamp'
+              examples:
+                example-0:
+                  summary: User Info - DATE
+                  value:
+                    simChange: '2020-07-13'
+                    correlation_id: 59c82672-107b-4019-b469-169bf955d8f1
+
+components:
+  schemas:
+    atpBoolean:
+      type: object
+      properties:
+        simChange:
+          type: boolean
+          required: true
+          example: 'simChange: true'
+        isUncontidionalCallDivertActive:
+          type: string
+          required: false
+        isLostStolen:
+          type: boolean
+          required: false
+        deviceChange:
+          type: string
+          required: false
+        accountState:
+          type: string
+          enum:
+            - active
+            - inactive
+    atpTimestamp:
+      type: object
+      properties:
+        simChange:
+          type: string
+          required: true
+          example: 'simChange: 2022-12-06'
+        isUncontidionalCallDivertActive:
+          type: string
+          required: false
+        isLostStolen:
+          type: boolean
+          required: false
+        deviceChange:
+          type: string
+          required: false
+        accountState:
+          type: string
+          enum:
+            - active
+            - inactive
+    simChangeBoolean:
+      type: object
+      properties:
+        simChange:
+          type: boolean
+          required: true
+          example: 'simChange: true'
+    simChangeTimestamp:
+      type: object
+      properties:
+        simChange:
+          type: string
+          required: true
+          example: 'simChange: 2022-12-06'
