--- a/code/API_definitions/MC_ATP.yaml
+++ b/code/API_definitions/MC_ATP.yaml
@@ -3,8 +3,25 @@ info:
   title: CAMARA simSwap
   description: CAMARA simSwap API based on Mobile Connect Account Takeover Protection API definition.
   version: 0.1.0
+  contact:
+    name: Support
+    email: support@example.com
+    url: https://support.example.com
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+externalDocs:
+  description: GSMA Mobile Connect Account Takeover Protection
+  url: https://www.gsma.com/identity/wp-content/uploads/2022/12/IDY.24-Mobile-Connect-Account-Takeover-Protection-Definition-and-Technical-Requirements-v2.0.pdf
 servers:
-  - url: https://api.server.test
+  - url: https://{countryServer}.{domain}
+    variables:
+      countryServer:
+        default: api.server
+        description: a server specific to country where API is delivered
+      domain:
+        default: com
+        description: a domain where server is delivered
     description: API server providing CAMARA APIs
 tags:
   - name: Mobile Connect ATP
@@ -14,6 +31,9 @@ paths:
       tags:
         - Mobile Connect ATP
       summary: Token
+      externalDocs:
+        description: Mobile Connect Client Credentials for Attributes
+        url: https://www.gsma.com/identity/wp-content/uploads/2022/12/IDY.56.2-Mobile-Connect-Client-Credentials-for-Attributes-Configuration-B.pdf
       security:
         - BasicAuth: []
       parameters:
