--- a/code/API_definitions/MC_ATP.yaml
+++ b/code/API_definitions/MC_ATP.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: CAMARA simSwap
-  description: CAMARA simSwap API based on Mobile Connect Account Takeover Protection API definition.
+  description: SIM Swap API based on Mobile Connect Account Takeover Protection API definition.
   version: 0.1.0
   contact:
     name: Support
