--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,32 @@
+.DS_Store
+
+### Generated files ###
+target/
+logs/
+
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
 ### IntelliJ IDEA ###
 .idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
 
 ### VS Code ###
 .vscode/
+.unotes/
