--- a/code/API_definitions/sim-swap-notification-subscription.yaml
+++ b/code/API_definitions/sim-swap-notification-subscription.yaml
@@ -192,7 +192,8 @@ paths:
       operationId: retrieveSubscription
       description: retrieve event subscription information for a given subscription.
       security:
-        - openId::
+        - openId:
+
           - sim-swap:subscriptions:read
       parameters:
         - name: subscriptionId
