Removing dot from end of error response message. This is to align with the other error messages (they lack the dot).

--- a/code/API_definitions/sim_swap.yaml
+++ b/code/API_definitions/sim_swap.yaml
@@ -250,7 +250,7 @@ components:
           example:
             status: 404
             code: SIM_SWAP.UNKNOWN_PHONE_NUMBER
-            message: SIM Swap can't be checked because the phone number is unknown.
+            message: SIM Swap can't be checked because the phone number is unknown
     Generic409:
       description: Conflict
       content:
