--- a/code/API_definitions/sim-swap-notification-subscription.yaml
+++ b/code/API_definitions/sim-swap-notification-subscription.yaml
@@ -2,32 +2,36 @@ openapi: 3.0.3
 info:
   title: Sim Swap Notification Subscription
   description: |
-    This API provides the customer with the ability to subscribe to event related to a sim swap operation performed on an associated phone number.
+This API provides the customer with the ability to subscribe to events related to a sim swap operation performed on an associated phone number.
 
     # Introduction
+
+    This API empowers service providers and network operators with a seamless mechanism for managing and monitoring SIM card swaps, a process often used in legitimate device upgrades or replacements but also susceptible to abuse in fraudulent activities.
 
     # Relevant terms and definitions
 
     * **SIM swap**:
     A SIM swap is a process in which a mobile phone user's current SIM card is deactivated or replaced with a new one. This is typically done by contacting the user's mobile service provider and requesting a new SIM card for various reasons, such as a lost or damaged SIM card, upgrading to a new phone, or changing phone numbers while keeping the same device.
 
-    # API Functionality    
+    # API Functionality
+
+    This API allows to manage client subscriptions to notification events published by the Sim Swap resource server at the URL provided when the subscription is created.
 
     The API exposes following capabilities:
-
+      * **/subscriptions**: This endpoint has two operations, one that allows to retrieve the list of Sim Swap event subscriptions and another one to create new event subscriptions.
+      * **/subscriptions/{subscriptionId}**: This endpoint also has two operations, one that allows to retrieve a particular event subscription by id and another one to delete an event subscription also using the id.
 
     ## Sim Swap notification subscription
 
     Theses endpoints allow to manage notification subscription on Sim Swap event. 
     The CAMARA subscription model is detailed in the CAMARA API design guideline document and follows Cloudevents specification.
 
-    It is mandatory in the subscription to provide the event `type` subscribed are several are managed in this API.
+    It is mandatory in the subscription to provide the event `type` to be subscribed.
 
     Only one event ``type`` is managed for this API: 
       - ``org.camaraproject.sim-swap.v0.swapped`` - Event triggered when a sim swap occurs on the associated phoneNumber
 
-
-    Note: Additionnally to these list, ``org.camaraproject.sim-swa.v0.subscription-ends`` notification `type` is sent when the subscription ends. 
+    Note: Additionally to these list, ``org.camaraproject.sim-swa.v0.subscription-ends`` notification `type` is sent when the subscription ends. 
     This notification did not requires dedicated subscription. 
     It is used when the subscription expire time (required by the requester) has been reached or if the API server has to terminate subscription (e.g. when the corresponding phone number is not served by the operator anymore). 
 
@@ -36,8 +40,7 @@ info:
     This endpoint describes the event notification received on subscription listener side when the event occurred. As for subscription, detailed description of the event notification is provided in the CAMARA API design guideline document.
 
     **WARNING**: This callback endpoint must be exposed on the listener side as `POST /{$request.body#/webhook/notificationUrl}`
-      will be posted by the sim swap resource server to the webhook url provided by notification 
-      listener.
+      will be posted by the sim swap resource server to the webhook url provided by notification  listener.
 
     ## Further info and support
 
